--- a/rooms.html
+++ b/rooms.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
@@ -101,7 +101,7 @@
     <nav class="navbar" id="navbar" data-aos="fade-down">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="index.html" class="logo">
+                <a href="/" class="logo">
                     <picture>
                         <source srcset="images/logo/kiwi-villa-logo.avif" type="image/avif">
                         <source srcset="images/logo/kiwi-villa-logo.webp" type="image/webp">
@@ -111,25 +111,25 @@
             </div>
             <ul class="nav-menu" id="nav-menu">
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link">首頁</a>
+                    <a href="/" class="nav-link">首頁</a>
                 </li>
                 <li class="nav-item">
-                    <a href="intro.html" class="nav-link">細說期遇</a>
+                    <a href="/intro" class="nav-link">細說期遇</a>
                 </li>
                 <li class="nav-item">
-                    <a href="location.html" class="nav-link">地理資訊</a>
+                    <a href="/location" class="nav-link">地理資訊</a>
                 </li>
                 <li class="nav-item">
-                    <a href="rooms.html" class="nav-link active">房型設施</a>
+                    <a href="/rooms" class="nav-link active">房型設施</a>
                 </li>
                 <li class="nav-item">
-                    <a href="reviews.html" class="nav-link">客戶評價</a>
+                    <a href="/reviews" class="nav-link">客戶評價</a>
                 </li>
                 <li class="nav-item">
-                    <a href="faq.html" class="nav-link">常見問題</a>
+                    <a href="/faq" class="nav-link">常見問題</a>
                 </li>
                 <li class="nav-item">
-                    <a href="policy.html" class="nav-link">訂房須知</a>
+                    <a href="/policy" class="nav-link">訂房須知</a>
                 </li>
                 <li class="nav-item">
                     <a href="https://booking.owlting.com/kiwi-villa" class="nav-link nav-booking" target="_blank">
@@ -856,7 +856,7 @@
                             <i class="fas fa-calendar-alt"></i>
                             立即預訂
                         </a>
-                        <a href="policy.html" class="btn btn-secondary">
+                        <a href="/policy" class="btn btn-secondary">
                             <i class="fas fa-info-circle"></i>
                             訂房須知
                         </a>
@@ -872,7 +872,7 @@
             <div class="footer-content">
                 <div class="footer-section" data-aos="fade-up" data-aos-delay="100">
                     <div class="footer-logo">
-                        <a href="index.html">
+                        <a href="/">
                             <picture>
                                 <source srcset="images/logo/kiwi-villa-logo.avif" type="image/avif">
                                 <source srcset="images/logo/kiwi-villa-logo.webp" type="image/webp">
@@ -899,18 +899,18 @@
                 <div class="footer-section" data-aos="fade-up" data-aos-delay="200">
                     <h4 class="footer-title">快速連結</h4>
                     <ul class="footer-links">
-                        <li><a href="intro.html">細說期遇</a></li>
-                        <li><a href="rooms.html">房型設施</a></li>
-                        <li><a href="location.html">地理資訊</a></li>
-                        <li><a href="reviews.html">客戶評價</a></li>
+                        <li><a href="/intro">細說期遇</a></li>
+                        <li><a href="/rooms">房型設施</a></li>
+                        <li><a href="/location">地理資訊</a></li>
+                        <li><a href="/reviews">客戶評價</a></li>
                     </ul>
                 </div>
                 
                 <div class="footer-section" data-aos="fade-up" data-aos-delay="300">
                     <h4 class="footer-title">服務資訊</h4>
                     <ul class="footer-links">
-                        <li><a href="faq.html">常見問題</a></li>
-                        <li><a href="policy.html">訂房須知</a></li>
+                        <li><a href="/faq">常見問題</a></li>
+                        <li><a href="/policy">訂房須知</a></li>
                         <li><a href="#booking">線上訂房</a></li>
                     </ul>
                 </div>
