--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
     <nav class="navbar" id="navbar" data-aos="fade-down">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="index.html" class="logo">
+                <a href="/" class="logo">
                     <picture>
                         <source srcset="images/logo/kiwi-villa-logo.avif" type="image/avif">
                         <source srcset="images/logo/kiwi-villa-logo.webp" type="image/webp">
@@ -689,25 +689,25 @@
             </div>
             <ul class="nav-menu" id="nav-menu">
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link active">首頁</a>
+                    <a href="/" class="nav-link active">首頁</a>
                 </li>
                 <li class="nav-item">
-                    <a href="intro.html" class="nav-link">細說期遇</a>
+                    <a href="/intro" class="nav-link">細說期遇</a>
                 </li>
                 <li class="nav-item">
-                    <a href="location.html" class="nav-link">地理資訊</a>
+                    <a href="/location" class="nav-link">地理資訊</a>
                 </li>
                 <li class="nav-item">
-                    <a href="rooms.html" class="nav-link">房型設施</a>
+                    <a href="/rooms" class="nav-link">房型設施</a>
                 </li>
                 <li class="nav-item">
-                    <a href="reviews.html" class="nav-link">客戶評價</a>
+                    <a href="/reviews" class="nav-link">客戶評價</a>
                 </li>
                 <li class="nav-item">
-                    <a href="faq.html" class="nav-link">常見問題</a>
+                    <a href="/faq" class="nav-link">常見問題</a>
                 </li>
                 <li class="nav-item">
-                    <a href="policy.html" class="nav-link">訂房須知</a>
+                    <a href="/policy" class="nav-link">訂房須知</a>
                 </li>
                 <li class="nav-item">
                     <a href="https://booking.owlting.com/kiwi-villa" class="nav-link nav-booking" target="_blank">
@@ -790,7 +790,7 @@
                     </div>
                     <h3 class="card-title">三面環海半島</h3>
                     <p class="card-description">獨特的地理位置，步行即可擁抱蔚藍大海，感受海島的無盡魅力</p>
-                    <a href="location.html" class="card-link">
+                    <a href="/location" class="card-link">
                         探索位置 <i class="fas fa-arrow-right"></i>
                     </a>
                 </div>
@@ -801,7 +801,7 @@
                     </div>
                     <h3 class="card-title">歐洲巴洛克建築</h3>
                     <p class="card-description">細膩立體美學，潮流與經典融合，復古與現代相互碰撞的建築藝術</p>
-                    <a href="intro.html" class="card-link">
+                    <a href="/intro" class="card-link">
                         建築之美 <i class="fas fa-arrow-right"></i>
                     </a>
                 </div>
@@ -812,7 +812,7 @@
                     </div>
                     <h3 class="card-title">期遇體驗</h3>
                     <p class="card-description">當夜幕低垂、繁星點點，那是一場與美好不期而遇的開始</p>
-                    <a href="rooms.html" class="card-link">
+                    <a href="/rooms" class="card-link">
                         房型體驗 <i class="fas fa-arrow-right"></i>
                     </a>
                 </div>
@@ -878,7 +878,7 @@
             <div class="footer-content">
                 <div class="footer-section" data-aos="fade-up" data-aos-delay="100">
                     <div class="footer-logo">
-                        <a href="index.html">
+                        <a href="/">
                             <picture>
                                 <source srcset="images/logo/kiwi-villa-logo.avif" type="image/avif">
                                 <source srcset="images/logo/kiwi-villa-logo.webp" type="image/webp">
@@ -905,18 +905,18 @@
                 <div class="footer-section" data-aos="fade-up" data-aos-delay="200">
                     <h4 class="footer-title">快速連結</h4>
                     <ul class="footer-links">
-                        <li><a href="intro.html">細說期遇</a></li>
-                        <li><a href="rooms.html">房型設施</a></li>
-                        <li><a href="location.html">地理資訊</a></li>
-                        <li><a href="reviews.html">客戶評價</a></li>
+                        <li><a href="/intro">細說期遇</a></li>
+                        <li><a href="/rooms">房型設施</a></li>
+                        <li><a href="/location">地理資訊</a></li>
+                        <li><a href="/reviews">客戶評價</a></li>
                     </ul>
                 </div>
                 
                 <div class="footer-section" data-aos="fade-up" data-aos-delay="300">
                     <h4 class="footer-title">服務資訊</h4>
                     <ul class="footer-links">
-                        <li><a href="faq.html">常見問題</a></li>
-                        <li><a href="policy.html">訂房須知</a></li>
+                        <li><a href="/faq">常見問題</a></li>
+                        <li><a href="/policy">訂房須知</a></li>
                         <li><a href="#booking">線上訂房</a></li>
                     </ul>
                 </div>
