--- a/rooms.html
+++ b/rooms.html
@@ -533,7 +533,7 @@
             <div class="container">
                 <div class="rooms-grid">
                 <!-- Deluxe Family Room -->
-                <div class="room-card featured" data-aos="fade-up">
+                <div class="room-card featured" id="room-201" data-aos="fade-up">
                     <div class="room-badge">推薦</div>
                     <div class="room-gallery">
                         <div class="gallery-item" data-aos="zoom-in">
@@ -633,7 +633,7 @@
                 </div>
 
                 <!-- Superior Quad Room -->
-                <div class="room-card" data-aos="fade-up" data-aos-delay="100">
+                <div class="room-card" id="room-203" data-aos="fade-up" data-aos-delay="100">
                     <div class="room-gallery">
                         <div class="gallery-item" data-aos="zoom-in">
                             <picture>
@@ -716,7 +716,7 @@
                 </div>
 
                 <!-- Luxury Quad Room -->
-                <div class="room-card" data-aos="fade-up" data-aos-delay="200">
+                <div class="room-card" id="room-205" data-aos="fade-up" data-aos-delay="200">
                     <div class="room-gallery">
                         <div class="gallery-item" data-aos="zoom-in">
                             <picture>
@@ -812,7 +812,7 @@
                 </div>
 
                 <!-- Superior Triple Room -->
-                <div class="room-card" data-aos="fade-up" data-aos-delay="300">
+                <div class="room-card" id="room-303" data-aos="fade-up" data-aos-delay="300">
                     <div class="room-gallery">
                         <div class="gallery-item" data-aos="zoom-in">
                             <picture>
@@ -896,7 +896,7 @@
                 </div>
 
                 <!-- Superior Twin Room -->
-                <div class="room-card" data-aos="fade-up" data-aos-delay="400">
+                <div class="room-card" id="room-301" data-aos="fade-up" data-aos-delay="400">
                     <div class="room-gallery">
                         <div class="gallery-item" data-aos="zoom-in">
                             <picture>
@@ -985,7 +985,7 @@
                 </div>
 
                 <!-- Superior Double Room -->
-                <div class="room-card" data-aos="fade-up" data-aos-delay="500">
+                <div class="room-card" id="room-305" data-aos="fade-up" data-aos-delay="500">
                     <div class="room-gallery">
                         <div class="gallery-item" data-aos="zoom-in">
                             <picture>
