--- a/rooms.html
+++ b/rooms.html
@@ -896,6 +896,8 @@
                 </div>
 
                 <!-- Superior Twin Room -->
+                <!-- 隱藏錨點：支援302跳轉到301房間 -->
+                <div id="room-302" style="position: absolute; visibility: hidden;"></div>
                 <div class="room-card" id="room-301" data-aos="fade-up" data-aos-delay="400">
                     <div class="room-gallery">
                         <div class="gallery-item" data-aos="zoom-in">
@@ -985,6 +987,9 @@
                 </div>
 
                 <!-- Superior Double Room -->
+                <!-- 隱藏錨點：支援306、307跳轉到305房間 -->
+                <div id="room-306" style="position: absolute; visibility: hidden;"></div>
+                <div id="room-307" style="position: absolute; visibility: hidden;"></div>
                 <div class="room-card" id="room-305" data-aos="fade-up" data-aos-delay="500">
                     <div class="room-gallery">
                         <div class="gallery-item" data-aos="zoom-in">
