--- a/404.html
+++ b/404.html
@@ -341,7 +341,7 @@
                 
                 // 1.5秒後跳轉
                 setTimeout(() => {
-                    window.location.href = `rooms.html#${roomMapping[roomNumber]}`;
+                    window.location.href = `./rooms.html#${roomMapping[roomNumber]}`;
                 }, 1500);
                 
                 return true;
