--- a/404.html
+++ b/404.html
@@ -321,7 +321,7 @@
                 console.log('檢測到房間號:', roomNumber, '跳轉到:', roomMapping[roomNumber]);
                 
                 // 立即跳轉（不顯示任何提示）
-                window.location.replace(`rooms.html#${roomMapping[roomNumber]}`);
+                window.location.replace(`/rooms#${roomMapping[roomNumber]}`);
                 
                 return true;
             }
