--- a/faq.html
+++ b/faq.html
@@ -58,8 +58,7 @@
     <noscript><link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css"></noscript>
     
     <!-- Main CSS -->
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/core.css">
     <link rel="stylesheet" href="css/faq.css">
     
     <!-- Structured Data -->
@@ -150,8 +149,6 @@
 
     <!-- Hero Section -->
     <section class="hero-section hero-animated">
-        <div class="hero-background" style="background-image: url('images/faq/faq-hero-bg.webp');"></div>
-        <div class="hero-overlay"></div>
         <div class="hero-content" data-aos="fade-up" data-aos-delay="300">
             <h1 class="hero-title">常見問題</h1>
             <p class="hero-subtitle">專業解答您的疑問</p>
