--- a/intro.html
+++ b/intro.html
@@ -58,8 +58,7 @@
     <noscript><link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css"></noscript>
     
     <!-- Main CSS -->
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/core.css">
     <link rel="stylesheet" href="css/intro.css">
     
     <!-- Structured Data -->
