--- a/reviews.html
+++ b/reviews.html
@@ -63,8 +63,7 @@
     <script src="https://static.elfsight.com/platform/platform.js" async></script>
     
     <!-- Main CSS -->
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/core.css">
     <link rel="stylesheet" href="css/reviews.css">
     
     <!-- Structured Data -->
@@ -143,8 +142,6 @@
 
     <!-- Hero Section -->
     <section class="hero-section hero-animated">
-        <div class="hero-background" style="background-image: url('images/reviews/reviews-hero-bg.webp');"></div>
-        <div class="hero-overlay"></div>
         <div class="hero-content" data-aos="fade-up" data-aos-delay="300">
             <h1 class="hero-title">客戶評價</h1>
             <p class="hero-subtitle">真實住客體驗分享</p>
