--- a/location.html
+++ b/location.html
@@ -58,8 +58,7 @@
     <noscript><link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css"></noscript>
     
     <!-- Main CSS -->
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/core.css">
     <link rel="stylesheet" href="css/location.css">
     
     <!-- Structured Data -->
@@ -144,8 +143,6 @@
 
     <!-- Hero Section -->
     <section class="hero-section hero-animated">
-        <div class="hero-background" style="background-image: url('images/location/location-hero-bg.webp');"></div>
-        <div class="hero-overlay"></div>
         <div class="hero-content" data-aos="fade-up" data-aos-delay="300">
             <h1 class="hero-title">地理資訊</h1>
             <p class="hero-subtitle">絕佳位置，交通便捷</p>
