--- a/rooms.html
+++ b/rooms.html
@@ -102,7 +102,7 @@
                     {
                         "@type": "LocationFeatureSpecification",
                         "name": "私人大陽台",
-                        "value": "60㎡"
+                        "value": "true"
                     },
                     {
                         "@type": "LocationFeatureSpecification",
@@ -162,7 +162,7 @@
                     {
                         "@type": "LocationFeatureSpecification",
                         "name": "私人陽台",
-                        "value": "38㎡"
+                        "value": "true"
                     },
                     {
                         "@type": "LocationFeatureSpecification",
@@ -222,7 +222,7 @@
                     {
                         "@type": "LocationFeatureSpecification",
                         "name": "雙私人陽台",
-                        "value": "54㎡"
+                        "value": "true"
                     },
                     {
                         "@type": "LocationFeatureSpecification",
@@ -287,7 +287,7 @@
                     {
                         "@type": "LocationFeatureSpecification",
                         "name": "私人陽台",
-                        "value": "36㎡"
+                        "value": "true"
                     },
                     {
                         "@type": "LocationFeatureSpecification",
@@ -347,7 +347,7 @@
                      {
                          "@type": "LocationFeatureSpecification",
                          "name": "私人大陽台",
-                         "value": "33㎡"
+                         "value": "true"
                      },
                      {
                          "@type": "LocationFeatureSpecification",
@@ -384,7 +384,7 @@
                  "@type": "HotelRoom",
                  "name": "高級雙人房-附陽台",
                  "alternateName": "泊305 韻306 縵307",
-                 "description": "浪漫雙人房型，配備29㎡陽台和KING SIZE大床，適合情侶或夫妻度假",
+                 "description": "浪漫雙人房型，配備陽台和KING SIZE大床，適合情侶或夫妻度假",
                  "identifier": "premium-double-room-305-306-307",
                  "bed": [
                      {
@@ -407,7 +407,7 @@
                      {
                          "@type": "LocationFeatureSpecification",
                          "name": "私人陽台",
-                         "value": "29㎡"
+                         "value": "true"
                      },
                      {
                          "@type": "LocationFeatureSpecification",
@@ -616,7 +616,7 @@
                                 <li>天絲棉定制床品</li>
                                 <li>訂制玫瑰金皮沙發單人組×2</li>
                                 <li>兒童帳篷</li>
-                                <li>私人大陽台 (60㎡超大空間)</li>
+                                <li>私人大陽台 (超大空間)</li>
                                 <li>43吋液晶電視</li>
                                 <li>全遮光遙控落地窗簾</li>
                                 <li>14cm加厚雙層真空靜音氣密窗</li>
@@ -700,7 +700,7 @@
                             <ul>
                                 <li>兩張KING SIZE豪華大床 (1.8×2.0m)</li>
                                 <li>天絲棉定制床品</li>
-                                <li>私人陽台 (38㎡舒適空間)</li>
+                                <li>私人陽台 (舒適空間)</li>
                                 <li>43吋液晶電視</li>
                                 <li>全遮光遙控落地窗簾</li>
                                 <li>14cm加厚雙層真空靜音氣密窗</li>
@@ -795,7 +795,7 @@
                             <ul>
                                 <li>兩張KING SIZE豪華大床 (1.8×2.0m)</li>
                                 <li>天絲棉定制床品</li>
-                                <li>雙私人陽台 (54㎡奢華空間)</li>
+                                <li>雙私人陽台 (奢華空間)</li>
                                 <li>TOTO涼暖風機</li>
                                 <li>43吋液晶電視</li>
                                 <li>全遮光遙控落地窗簾</li>
@@ -879,7 +879,7 @@
                             <ul>
                                 <li>KING SIZE豪華大床 (1.8×2.0m) + 單人床 (1.2×2.0m)</li>
                                 <li>天絲棉定制床品</li>
-                                <li>私人陽台 (36㎡適中空間)</li>
+                                <li>私人陽台 (適中空間)</li>
                                 <li>兒童小屋</li>
                                 <li>43吋液晶電視</li>
                                 <li>全遮光遙控落地窗簾</li>
@@ -971,7 +971,7 @@
                             <ul>
                                 <li>兩張單人床</li>
                                 <li>天絲棉定制床品</li>
-                                <li>私人大陽台 (33㎡精緻空間)</li>
+                                <li>私人大陽台 (精緻空間)</li>
                                 <li>43吋液晶電視</li>
                                 <li>全遮光遙控落地窗簾</li>
                                 <li>14cm加厚雙層真空靜音氣密窗</li>
@@ -1165,7 +1165,7 @@
                             <ul>
                                 <li>KING SIZE雙人床 (1.8×2.0m)</li>
                                 <li>天絲棉定制床品</li>
-                                <li>私人陽台 (29㎡溫馨空間)</li>
+                                <li>私人陽台 (溫馨空間)</li>
                                 <li>43吋液晶電視</li>
                                 <li>全遮光遙控落地窗簾</li>
                                 <li>14cm加厚雙層真空靜音氣密窗</li>
